# country-select

./: Makefile  README.md  country-select.opam  dune  dune-project  index.html  main.js  package-lock.json  package.json  webpack.config.js
.github/workflows/: build-sample-project.yml  webpack.yml
src/: App.re  CountrySelect.re  DesignSystem.re  Index.re  ReactApp.re  dune
src/bindings/: ReactSelect.re  ReactVisibilitySensor.re  dune
src/components/: CountrySelect.re  Dropdown.re  FlagIcon.re  Icon.re  Spacer.re
src/types/: Country.re
src/utils/: IOUtils.re  ReactIO.re  Style.re  StyleUtils.re  TypeUtils.re  dune
