opam-version: "2.0"
synopsis: "Country Select"
description: "React app for simple country dropdown selection"
maintainer: ["Jeremy Weidner"]
authors: ["Jeremy Weidner"]
license: "MIT"
homepage: "https://github.com/endlo/country-select"
bug-reports: "https://github.com/endlo/country-select/issues"
depends: [
  "ocaml" {>= "5.1.0"}
  "reason" {>= "3.10.0"}
  "dune" {>= "3.8"}
  "melange" {>= "2.0.0"}
  "reason-react" {>= "0.13.0"}
  "reason-react-ppx"
  "opam-check-npm-deps" {with-test} # todo: use with-dev-setup once opam 2.2 is out
  "ocaml-lsp-server" {with-test} # todo: use with-dev-setup once opam 2.2 is out
  "dot-merlin-reader" {with-test} # todo: use with-dev-setup once opam 2.2 is out
  "odoc" {with-doc}
  "relude" {>= "2.0.0"}
  "melange-fetch" {>= "0.1.0"}
]
dev-repo: "git+https://github.com/endlo/country-select.git"
pin-depends: [
  [ "bastet.dev" "git+https://github.com/johnhaley81/bastet.git#6c8f53a9da55254691df49bddf96b279b38be204" ]
  [ "relude.dev" "git+https://github.com/reazen/relude.git#v2" ]
]
