(lang dune 3.8)

(using melange 0.1)

(name country-select)

(license "MIT")

(maintainers "Jeremy Weidner")

(authors "Jeremy Weidner")

(homepage https://github.com/endlo/country-select)

(bug_reports https://github.com/endlo/country-select/issues)

(package
 (allow_empty)
 (name country-select)
 (synopsis "Country Select")
 (description "React app for simple country dropdown selection"))
